style(Grid.css): fix height on narrow screens

--- a/src/components/grid/Grid.css
+++ b/src/components/grid/Grid.css
@@ -1,6 +1,6 @@
 .grid {
   width: 100%;
-  height: 65vh;
+  height: 100%;
   border: calc((1vw + 1vh)/10) solid rgba(0, 255, 255, 0.5);
   border-radius: calc((1vw + 1vh)/1.5);
 }
